# hive

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  Makefile.toml  README.md  build.rs  docker-compose.yaml  job.nomad.hcl  rustfmt.toml  secrets.env.example  shell.nix
locales/: hive.yaml
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_membership_func.down.sql  0002_membership_func.up.sql  0003_assign-perms_permission.down.sql  0003_assign-perms_permission.up.sql  0004_manager_subgroups.down.sql  0004_manager_subgroups.up.sql  0005_all_subgroups_func.down.sql  0005_all_subgroups_func.up.sql  0006_group_members_func.down.sql  0006_group_members_func.up.sql  0007_propagate_membership_bounds.down.sql  0007_propagate_membership_bounds.up.sql  0008_unique_permission_assignments.down.sql  0008_unique_permission_assignments.up.sql  0009_api_token_secret_hashing.down.sql  0009_api_token_secret_hashing.up.sql  0010_tag_permissions.down.sql  0010_tag_permissions.up.sql  0011_unique_tag_assignments.down.sql  0011_unique_tag_assignments.up.sql  0012_api_permissions.down.sql  0012_api_permissions.up.sql  0013_fix_subgroups_pk.down.sql  0013_fix_subgroups_pk.up.sql  0014_subtags.down.sql  0014_subtags.up.sql  0015_integrations.down.sql  0015_integrations.up.sql  0016_fix_all_members_of_date_filter.down.sql  0016_fix_all_members_of_date_filter.up.sql  0017_appointment_limit.down.sql  0017_appointment_limit.up.sql  0018_api_system_impersonation.down.sql  0018_api_system_impersonation.up.sql  0019_view_groups_permission.down.sql  0019_view_groups_permission.up.sql  0020_impersonation.down.sql  0020_impersonation.up.sql  (+4 more)
src/: api.rs  auth.rs  config.rs  dto.rs  errors.rs  guards.rs  integrations.rs  logging.rs  main.rs  models.rs  perms.rs  resolver.rs  routing.rs  sanitizers.rs  services.rs  web.rs
src/api/: catchers.rs  docs.html  v0.rs  v1.rs
src/auth/: oidc.rs
src/dto/: api_tokens.rs  datetime.rs  errors.rs  groups.rs  logs.rs  permissions.rs  systems.rs  tags.rs
src/guards/: api.rs  context.rs  cors.rs  headers.rs  lang.rs  nav.rs  perms.rs  scheme.rs  user.rs
src/integrations/: grafana.rs  gworkspace.rs
src/routing/: cors.rs
src/services/: api_tokens.rs  audit_logs.rs  groups.rs  integrations.rs  permissions.rs  systems.rs  tags.rs
src/web/: api_tokens.rs  auth.rs  catchers.rs  groups.rs  logs.rs  permissions.rs  systems.rs  tags.rs  user.rs
static/: combobox.css  combobox.js  main.js  site.webmanifest  styles.css
templates/: api-versions.html.j2  base.html.j2  hello.html.j2  home.html.j2  utils.html.j2
templates/api-tokens/: create.html.j2  created.html.j2  list.html.j2  row-cells.html.j2
templates/errors/: dialog.html.j2  full.html.j2  partial.html.j2
templates/groups/: create.html.j2  delete.html.j2  details.html.j2  edit.html.j2  edited.html.j2  info-tooltip.html.j2  list.html.j2
templates/integrations/: logs.html.j2  settings.html.j2  task-finished.html.j2
templates/logs/: details.html.j2  log-cells.html.j2
templates/permissions/: create.html.j2  created.html.j2  delete.html.j2  details.html.j2  key.html.j2  list.html.j2  row-cells.html.j2
templates/systems/: create.html.j2  delete.html.j2  details.html.j2  edit.html.j2  edited.html.j2  list.html.j2
templates/tags/: create.html.j2  delete.html.j2  details.html.j2  key.html.j2  list.html.j2  row-cells.html.j2
templates/user/: profile.html.j2  settings.html.j2
(+53 files in other folders)
