[package]
name = "hive"
version = "0.1.0"
edition = "2021"
authors = ["Konglig Datasektionen"]
description = "Group and permissions management system"
repository = "https://github.com/datasektionen/hive"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.96"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
log = "0.4.25"
regex = "1.11.1"
rinja = "0.3.5" # will be replaced with askama next release
rocket = { version = "0.5.1", features = ["json"] }
rust-i18n = "3.1.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "json",
    "chrono",
] }
thiserror = "2.0.11"

[profile.dev.package.rinja_derive]
opt-level = 3 # faster incremental compiles
