[package]
name = "hive"
version = "0.1.0"
edition = "2021"
authors = ["Konglig Datasektionen"]
description = "Group and permissions management system"
repository = "https://github.com/datasektionen/hive"
license = "GPL-3.0-or-later"
publish = false
rust-version = "1.82"

[features]
default = ["api-docs"]
api-docs = []
integrations = [ # the underlying control mechanism
    "dep:tokio-cron-scheduler",
]

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.30", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
hex = "0.4.3"
log = "0.4.25"
openidconnect = { version = "4.0.0", features = [
    "timing-resistant-secret-traits",
] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
], default-features = false }
rinja = "0.3.5" # will be replaced with askama next release
rocket = { version = "0.5.1", features = ["json", "secrets", "uuid"] }
rust-i18n = "3.1.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
simplelog = "0.12.2"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "json",
    "chrono",
] }
thiserror = "2.0.11"
tokio-cron-scheduler = { version = "0.13.0", optional = true }
uuid = { version = "1.15.1", features = ["v4"] }

[profile.dev.package.rinja_derive]
opt-level = 3 # faster incremental compiles
